--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,7 @@
 @import 'semantic-ui';
 @import 'semantic-ui/collections/menu';
+
+#page-content {
+  flex: 1 0 auto;
+  background-color: #302F2F;
+}
