added icon, menu, and chatbox to root page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,3 +5,11 @@
   flex: 1 0 auto;
   background-color: #302F2F;
 }
+
+.chatbox {
+  height: 450px;
+}
+
+.whitext {
+  text-decoration-color: white;
+}
