added text input and send button that doesn't work yet, modified hardcoded text

--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -7,43 +7,57 @@
   <div class="twelve wide column">
     <div class="ui fluid card chatbox" id="page-content">
       <div class="content">
-        <div class="ui small feed">
+        <div class="ui feed">
           <h4 class="ui inverted header">Followers Activity</h4>
           <div class="event">
             <div class="content">
               <div class="summary">
-                 <a>Elliot Fu</a> added <a>Jenny Hess</a> as a friend
+                 <em>Elliot Fu</em>: ate bad egg salad
               </div>
             </div>
           </div>
           <div class="event">
             <div class="content">
               <div class="summary">
-                 <a>Stevie Feliciano</a> added <a>Elliot Fu</a> as a friend
+                 <strong>Stevie Feliciano</strong>: died
               </div>
             </div>
           </div>
           <div class="event">
             <div class="content">
               <div class="summary">
-                 <a>Helen Troy</a> added <a>Christian Rocha</a> as a friend
+                 <b>Helen Troy</b>: hi
               </div>
             </div>
           </div>
           <div class="event">
             <div class="content">
               <div class="summary">
-                 <a>Christian Rocha</a> signed up for the  site.
+                 <em>Christian Rocha</em>: Test message
               </div>
             </div>
           </div>
         </div>
       </div>
+      <div class="extra content">
+        <form class="ui reply form">
+          <div class="field">
+            <div class="ui fluid icon input">
+              <div class="ui inverted transparent icon input">
+                <input type="text" placeholder="Enter a message...">
+              </div>
+              <i class="bordered inverted green edit icon"></i>
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 
   <div class="four wide column">
-    <div class="ui inverted vertical menu">
+    <div class="ui card" id="page-content">
+      <div class="content">
+    <div class="ui fluid inverted vertical menu">
       <a class="active item">
         Home
       </a>
@@ -55,4 +69,6 @@
       </a>
     </div>
   </div>
+</div>
+</div>
 </div>
