--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -8,31 +8,31 @@
     <div class="ui fluid card chatbox" id="page-content">
       <div class="content">
         <div class="ui feed">
-          <h4 class="ui inverted header">Followers Activity</h4>
+          <h4 class="ui inverted header">Spiky Chat</h4>
           <div class="event">
             <div class="content">
-              <div class="summary">
+              <div class="whitext">
                  <em>Elliot Fu</em>: ate bad egg salad
               </div>
             </div>
           </div>
           <div class="event">
             <div class="content">
-              <div class="summary">
+              <div class="whitext">
                  <strong>Stevie Feliciano</strong>: died
               </div>
             </div>
           </div>
           <div class="event">
             <div class="content">
-              <div class="summary">
+              <div class="whitext">
                  <b>Helen Troy</b>: hi
               </div>
             </div>
           </div>
           <div class="event">
             <div class="content">
-              <div class="summary">
+              <div class="whitext">
                  <em>Christian Rocha</em>: Test message
               </div>
             </div>
