created mild functionality for login page, styled login and chatroom pages, created database with seeds

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,6 +5,9 @@
   flex: 1 0 auto;
   background-color: #302F2F;
 }
+#darktext {
+  color: white;
+}
 
 .chatbox {
   height: 450px;
@@ -12,6 +15,12 @@
 
 .whitext {
   color: white;
+  display: inline-block;
+}
+
+.usertext {
+  color: green;
+  display: inline-block;
 }
 
 .header {
