--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -8,35 +8,8 @@
     <div class="ui fluid card chatbox" id="page-content">
       <div class="content">
         <div class="ui feed">
-          <h4 class="ui inverted header">Spiky Chat</h4>
-          <div class="event">
-            <div class="content">
-              <div class="whitext">
-                 <em>Elliot Fu</em>: ate bad egg salad
-              </div>
-            </div>
-          </div>
-          <div class="event">
-            <div class="content">
-              <div class="whitext">
-                 <strong>Stevie Feliciano</strong>: died
-              </div>
-            </div>
-          </div>
-          <div class="event">
-            <div class="content">
-              <div class="whitext">
-                 <b>Helen Troy</b>: hi
-              </div>
-            </div>
-          </div>
-          <div class="event">
-            <div class="content">
-              <div class="whitext">
-                 <em>Christian Rocha</em>: Test message
-              </div>
-            </div>
-          </div>
+          <h4 class="ui green header">Spiky Chat</h4>
+          <%= render @messages %>
         </div>
       </div>
       <div class="extra content">
