--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -16,7 +16,7 @@
         <form class="ui reply form">
           <div class="field">
             <div class="ui fluid icon input">
-              <div class="ui inverted transparent icon input">
+              <div class="ui transparent icon input">
                 <input type="text" placeholder="Enter a message...">
               </div>
               <i class="bordered inverted green edit icon"></i>
