--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -8,21 +8,21 @@
     <div class="ui fluid card chatbox" id="page-content">
       <div class="content">
         <div class="ui feed">
-          <h4 class="ui green header">Spiky Chat</h4>
+          <h4 class="ui center aligned green header">Spiky Chat</h4>
           <%= render @messages %>
         </div>
       </div>
       <div class="extra content">
-        <form class="ui reply form">
+        <%= form_for(@message, html: {class: "ui reply form", role: "form"}, url: message_path) do |f| %>
           <div class="field">
             <div class="ui fluid icon input">
               <div class="ui transparent icon input">
-                <input type="text" placeholder="Enter a message...">
+                <%= f.text_field :body %>
               </div>
-              <i class="bordered inverted green edit icon"></i>
+              <%= f.button '<i class="bordered inverted green edit icon"></i>'.html_safe %>
             </div>
           </div>
-        </form>
+        <% end %>
       </div>
     </div>
   </div>
