--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -7,13 +7,13 @@
   <div class="twelve wide column">
     <div class="ui fluid card chatbox" id="page-content">
       <div class="content">
-        <div class="ui feed">
-          <h4 class="ui center aligned green header">Spiky Chat</h4>
+        <div class="ui feed" id="message-container">
+          <!-- <h4 class="ui center aligned green header">Spiky Chat</h4> -->
           <%= render @messages %>
         </div>
       </div>
       <div class="extra content">
-        <%= form_for(@message, html: {class: "ui reply form", role: "form"}, url: message_path) do |f| %>
+        <%= form_for(@message, html: {class: "ui reply form", role: "form"}, url: message_path, method: "POST", remote: true) do |f| %>
           <div class="field">
             <div class="ui fluid icon input">
               <div class="ui transparent icon input">
