--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -18,7 +18,7 @@
           <div class="field">
             <div class="ui fluid icon input">
               <div class="ui transparent icon input">
-                <%= f.text_field :body, id: "darktext" %>
+                <%= f.text_field :body, class: "darktext1"%>
               </div>
               <%= f.button '<i class="bordered inverted green edit icon"></i>'.html_safe %>
             </div>
